# Salamander

./: CMakeLists.txt  README.md
assets/: quad_fragment.glsl  quad_vertex.glsl
examples/Pong/: CMakeLists.txt
examples/Pong/assets/: quad_fragment.glsl  quad_vertex.glsl
examples/Pong/src/: main.cpp
include/: Basic.h  Platform.h  Renderer.h
include/Memory/: Pool.h
scripts/: embed.py
src/: Input.cpp  Input.h  Platform.cpp  Platform.h  QuadFragmentShader.h  QuadVertexShader.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/Memory/: Arena.h
